--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="stylesheet.css"> 
 	<link rel="stylesheet" href="responsive.css">
 	<link rel="stylesheet" href="http://fonts.cdnfonts.com/css/draft-b">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -32,9 +33,9 @@
 	<div class="topcontent">
 		<img src="Logo.jpg">
 		<div class="explore">
-			<h3>Dedicated to all</h3>
-			<h3>the dream achievers</h3>
-			<h3>out there,</h3>
+			<p>Dedicated to all</p>
+			<p>the dream achievers</p>
+			<p>out there,</p>
 			<a href="#" class="bt exp">I'm in!</a>
 		</div>
 	</div>
@@ -42,7 +43,7 @@
 	<div class="prodcontent">
 		<div class="container">
 			<img class="dream" src="Dreamie.png">
-			<h3>is here to dare you to dream beyond the stars!</h3>
+			<p>is here to dare you to dream beyond the stars!</p>
 			<div class="prods">
 				<div class="prod">
 				<div class="vol">
