--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	<div class="topcontent">
 		<img src="Logo.jpg">
 		<div class="explore">
-			<p>Dedicated to all</p>
-			<p>the dream achievers</p>
-			<p>out there,</p>
+			<h3>Dedicated to all</h3>
+			<h3>the dream achievers</h3>
+			<h3>out there,</h3>
 			<a href="#" class="bt exp">I'm in!</a>
 		</div>
 	</div>
